unpackaged/objects/GroupName__c.object
<CustomObject>
    <fields>
        <fullName>EigyoTanto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業担当</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shimei__c.StaffStatus__c</field>
                <operation>equals</operation>
                <value>在職者</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipName>R00N10000000IFYmEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GroupCd__c</fullName>
        <displayFormat>{000}</displayFormat>
        <externalId>true</externalId>
        <label>割引グループコード</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>GroupLasttimeDiscountPer__c</fullName>
        <label>前回割引率</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GroupNameEng__c</fullName>
        <label>割引グループ名称（英語）</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupNameKana__c</fullName>
        <label>割引グループ名称（カナ）</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupTekiyouDiscountDate__c</fullName>
        <label>グループ割引適用日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GroupWaribikiPer__c</fullName>
        <label>グループ割引率</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>割引グループ</label>
    <listViews>
        <fullName>x01</fullName>
        <columns>GroupCd__c</columns>
        <columns>NAME</columns>
        <columns>GroupWaribikiPer__c</columns>
        <columns>GroupTekiyouDiscountDate__c</columns>
        <columns>GroupLasttimeDiscountPer__c</columns>
        <columns>EigyoTanto__c</columns>
        <filterScope>Everything</filterScope>
        <label>01. すべてのグループ</label>
    </listViews>
    <listViews>
        <fullName>x025</fullName>
        <columns>GroupCd__c</columns>
        <columns>NAME</columns>
        <columns>GroupNameKana__c</columns>
        <columns>GroupWaribikiPer__c</columns>
        <columns>EigyoTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GroupWaribikiPer__c</field>
            <operation>equals</operation>
            <value>5</value>
        </filters>
        <label>02.  5%のグループ</label>
    </listViews>
    <listViews>
        <fullName>x0310</fullName>
        <columns>GroupCd__c</columns>
        <columns>NAME</columns>
        <columns>GroupNameKana__c</columns>
        <columns>GroupWaribikiPer__c</columns>
        <columns>EigyoTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GroupWaribikiPer__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <label>03. 10%のグループ</label>
    </listViews>
    <listViews>
        <fullName>x0415</fullName>
        <columns>GroupCd__c</columns>
        <columns>NAME</columns>
        <columns>GroupNameKana__c</columns>
        <columns>GroupWaribikiPer__c</columns>
        <columns>EigyoTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GroupWaribikiPer__c</field>
            <operation>equals</operation>
            <value>15</value>
        </filters>
        <label>04. 15%のグループ</label>
    </listViews>
    <listViews>
        <fullName>x0520</fullName>
        <columns>GroupCd__c</columns>
        <columns>NAME</columns>
        <columns>GroupNameKana__c</columns>
        <columns>GroupWaribikiPer__c</columns>
        <columns>EigyoTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GroupWaribikiPer__c</field>
            <operation>equals</operation>
            <value>20</value>
        </filters>
        <label>05. 20%のグループ</label>
    </listViews>
    <listViews>
        <fullName>x0625</fullName>
        <columns>GroupCd__c</columns>
        <columns>NAME</columns>
        <columns>GroupNameKana__c</columns>
        <columns>GroupWaribikiPer__c</columns>
        <columns>EigyoTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GroupWaribikiPer__c</field>
            <operation>equals</operation>
            <value>25</value>
        </filters>
        <label>06. 25%のグループ</label>
    </listViews>
    <listViews>
        <fullName>x0630</fullName>
        <columns>GroupCd__c</columns>
        <columns>NAME</columns>
        <columns>GroupNameKana__c</columns>
        <columns>GroupWaribikiPer__c</columns>
        <columns>EigyoTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GroupWaribikiPer__c</field>
            <operation>greaterOrEqual</operation>
            <value>30</value>
        </filters>
        <label>06. 30%以上のグループ</label>
    </listViews>
    <listViews>
        <fullName>x10</fullName>
        <columns>GroupCd__c</columns>
        <columns>NAME</columns>
        <columns>GroupWaribikiPer__c</columns>
        <columns>GroupTekiyouDiscountDate__c</columns>
        <columns>GroupLasttimeDiscountPer__c</columns>
        <columns>EigyoTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>優良</value>
        </filters>
        <label>10. 優良割引グループ</label>
    </listViews>
    <nameField>
        <label>割引グループ名称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>